--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -4,15 +4,18 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-	<link rel="stylesheet" href="/global-css.css">
+	<link rel="stylesheet" href="global-css.css">
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+	<script src="js/index.js"></script>
 	<title>Booking</title>
 </head>
 <body>
 	<div class="jumbotron">
 		<div class="text-center">
 			<h2>Welcome to Booking application</h2>
+			<button class="btn btn-primary" id="loginButton">Login</button>
+			<button class="btn btn-secondary" id="registerButton">Register</button>
 		</div>
 	</div>
 	
