--- a/WebContent/html/login.html
+++ b/WebContent/html/login.html
@@ -12,6 +12,9 @@
     <title>Login</title>
 </head>
 <body>
+	<nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
+		<a class="nav-link" href="../index.html">Booking</a>
+	</nav>
     <div class="jumbotron">
         <div class="text-center">
             <h2 id="title">Login</h2>
