--- a/WebContent/html/profile.html
+++ b/WebContent/html/profile.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-	<script src="../js/register.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="../global-css.css">
-    <link rel="stylesheet" href="../css/register.css">
-    <title>Register</title>
+    <link rel="stylesheet" href="../css/profile.css">
+    <script src="../js/profile.js"></script>
+    <title>Login</title>
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
@@ -17,42 +17,35 @@
 	</nav>
     <div class="jumbotron">
         <div class="text-center">
-            <h2 id="title">Register</h2>
+            <h2>My Details</h2>
             <div class="form">
                 <div class="username-section">
-                    <input type="text" placeholder="Username" class="form-control" id="username">
+                    <p>Username </p>
+                    <input type="text" placeholder="Username" class="form-control" id="username" readonly>
                     <p id="username-label">Username cannot be empty</p>
                 </div>
+
                 <div class="firstName-section">
-                    <input type="text" placeholder="First name" class="form-control" id="firstName">
+                    <p>First name </p>
+                    <input type="text" class="form-control" id="firstName">
                     <p id="firstName-label">First name cannot be empty</p>
                 </div>
 
                 <div class="lastName-section">
-                    <input type="text" placeholder="Last name" class="form-control" id="lastName">
+                    <p>Last name </p>
+                    <input type="text" class="form-control" id="lastName">
                     <p id="lastName-label">Last name cannot be empty</p>
                 </div>
-
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="gender" id="male" value="Male" checked>
-                    <label class="form-check-label" for="male">
-                      Male
-                    </label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="gender" id="female" value="Female">
-                    <label class="form-check-label" for="female">
-                      Female
-                    </label>
-                </div>
-
-                <input type="password" id="password" class="form-control" placeholder="Password">
+				
+				<p>Password </p>
+                <input type="password" id="password" class="form-control">
                 <div class="password-section">
                     <input type="password" placeholder="Enter password again" class="form-control" id="password2">
                     <p id="password-label">Password cannot be empty</p>
                     <p id="password2-label">Passwords have to match</p>
                 </div>
-                <button id="register" class="btn btn-primary">Register</button>
+
+                <button class="btn btn-primary" id="submit"> Submit</button>
             </div>
         </div>
     </div>
