--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -5,17 +5,24 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 	<link rel="stylesheet" href="global-css.css">
+	<link rel="stylesheet" href="css/index.css">
   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 	<script src="js/index.js"></script>
 	<title>Booking</title>
 </head>
 <body>
+	<nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
+		<a class="nav-link" href="index.html">Booking</a>
+		<button class="btn btn-primary" id="loginButton">Login</button>
+		<button class="btn btn-secondary" id="registerButton">Register</button>
+		
+		<button class="btn btn-primary" id="profileButton"> Profile</button>
+	</nav>
 	<div class="jumbotron">
 		<div class="text-center">
 			<h2>Welcome to Booking application</h2>
-			<button class="btn btn-primary" id="loginButton">Login</button>
-			<button class="btn btn-secondary" id="registerButton">Register</button>
+			<button class="btn btn-primary" id="logoutButton"> Logout</button>
 		</div>
 	</div>
 	
