Listing users as well as admin login

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -18,6 +18,7 @@
 		<button class="btn btn-secondary" id="registerButton">Register</button>
 		
 		<button class="btn btn-primary" id="profileButton"> Profile</button>
+		<button class="btn btn-primary" id="adminProfileButton"> Profile</button>
 	</nav>
 	<div class="jumbotron">
 		<div class="text-center">
