--- a/WebContent/html/hostProfile.html
+++ b/WebContent/html/hostProfile.html
@@ -7,9 +7,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="../global-css.css">
-    <link rel="stylesheet" href="../css/adminProfile.css">
-    <script src="../js/adminProfile.js"></script>
-    <title>Admin</title>
+    <link rel="stylesheet" href="../css/hostProfile.css">
+    <script src="../js/hostProfile.js"></script>
+    <title>Host</title>
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
@@ -17,8 +17,8 @@
 	</nav>
     <div class="jumbotron">
         <div class="text-center">
-            <h2>Admin profile</h2>
-            <h3 id="listHeadline">List of all users</h3>
+            <h2>Host profile</h2>
+            <h3 id="listHeadline">List of users that have reserved my apartments</h3>
 
             <div class="search-section">
                 <input class="form-control" type="text" placeholder="Search by username" aria-label="Search" id="searchField">
@@ -39,7 +39,7 @@
                 <tbody id="table-body">
                 </tbody>
               </table>
-              <button class="btn btn-primary" id="amenities">Managing amenities</button>
+              
         </div>
     </div>
 </body>
