--- a/WebContent/html/profile.html
+++ b/WebContent/html/profile.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../global-css.css">
     <link rel="stylesheet" href="../css/profile.css">
     <script src="../js/profile.js"></script>
-    <title>Login</title>
+    <title>User</title>
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
