--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -23,7 +23,12 @@
 	</nav>
 	<div class="jumbotron">
 		<div class="text-center">
-			<h2>Welcome to Booking application</h2>
+			<h2 id="title">Welcome to Booking application</h2>
+
+			<div class="apartments">
+				
+			</div>
+
 			<button class="btn btn-primary" id="logoutButton"> Logout</button>
 		</div>
 	</div>
