Adding hosts and blocking users

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -15,7 +15,7 @@
 	<nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
 		<a class="nav-link" href="index.html">Booking</a>
 		<button class="btn btn-primary" id="loginButton">Login</button>
-		<button class="btn btn-secondary" id="registerButton">Register</button>
+		<button class="btn btn-light" id="registerButton">Register</button>
 		
 		<button class="btn btn-primary" id="profileButton"> Profile</button>
 		<button class="btn btn-primary" id="adminProfileButton"> Profile</button>
