--- a/WebContent/html/adminProfile.html
+++ b/WebContent/html/adminProfile.html
@@ -34,12 +34,55 @@
                     <th scope="col">Last Name</th>
                     <th scope="col">Gender</th>
                     <th scope="col">Active</th>
+                    <th scope="col">Action</th>
                   </tr>
                 </thead>
                 <tbody id="table-body">
                 </tbody>
               </table>
               <button class="btn btn-primary" id="amenities">Managing amenities</button>
+              <!-- Adding hosts -->
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#hostsModal" id="addNewHost">
+                    Add new host
+                </button>
+                
+                <!-- Modal -->
+                <div class="modal fade" id="hostsModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                        <h3 class="modal-title" id="exampleModalLabel">Add new host</h3>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        </div>
+                        <div class="modal-body">
+                            <input class="form-control" type="text" placeholder="Host name" id="username">
+                            <input class="form-control" type="text" placeholder="First name" id="firstName">
+                            <input class="form-control" type="text" placeholder="Last name" id="lastName">
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="gender" id="male" value="Male" checked>
+                                <label class="form-check-label" for="male">
+                                  Male
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="gender" id="female" value="Female">
+                                <label class="form-check-label" for="female">
+                                  Female
+                                </label>
+                            </div>
+                        </div>
+                        <input class="form-control" type="password" placeholder="Password" id="password">
+                        <input class="form-control" type="password" placeholder="Confirm password" id="password2">
+                        <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary" id="addHost">Add host</button>
+                        </div>
+                    </div>
+                    </div>
+                </div>
+
         </div>
     </div>
 </body>
