--- a/WebContent/html/apartmentDetails.html
+++ b/WebContent/html/apartmentDetails.html
@@ -17,6 +17,9 @@
     <title>Details</title>
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
+        <a class="nav-link" href="../index.html">Booking</a>
+	</nav>
     <div class="jumbotron">
         <div class="text-center">
             <div class="container">
@@ -41,6 +44,30 @@
 
                 <div class="datesContainer">
                     
+                </div>
+                
+                <!-- Modal -->
+                <div class="modal fade" id="rentModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                        <h3 class="modal-title" id="exampleModalLabel">Rent request</h3>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        </div>
+                        <div class="modal-body">
+                            <input class="form-control" type="number" id="numberOfNights" placeholder="Number of nights" min="0">
+                            <input class="form-control" type="text" id="message" placeholder="Message for host">
+                            <input type="date" class="form-control date" placeholder="Pick check in date" id="date">
+
+                        </div>
+                        <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary" id="sendRentRequest"> Send</button>
+                        </div>
+                    </div>
+                    </div>
                 </div>
 
             </div>
