--- a/WebContent/html/adminProfile.html
+++ b/WebContent/html/adminProfile.html
@@ -18,7 +18,7 @@
 	</nav>
     <div class="jumbotron">
         <div class="text-center">
-            <h2>Admin profile</h2>
+            <h2 id="headline">Admin profile</h2>
             <h3 id="listHeadline">List of all users</h3>
 
             <div class="search-section">
@@ -46,6 +46,24 @@
                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#hostsModal" id="addNewHost">
                     Add new host
                 </button>
+                
+                <h3 id="reservations">Reservations</h3>
+
+                <table class="table table-hover" id="reservationsTable">
+                    <thead class="thead-inverse">
+                        <tr>
+                          <th scope="col">#</th>
+                          <th scope="col">Username </th>
+                          <th scope="col">Apartment</th>
+                          <th scope="col">Message</th>
+                          <th scope="col">From</th>
+                          <th scope="col">Until</th>
+                          <th scope="col">Status</th>
+                        </tr>
+                      </thead>
+                      <tbody id="reservations-body">
+                      </tbody>
+                  </table>
                 
                 <!-- Modal -->
                 <div class="modal fade" id="hostsModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
