--- a/WebContent/html/hostProfile.html
+++ b/WebContent/html/hostProfile.html
@@ -40,6 +40,42 @@
                 <tbody id="table-body">
                 </tbody>
               </table>
+              <hr>
+              <h3 id="pendingReservations">Pending reservations</h3>
+
+              <table class="table table-hover" id="reservationsTable">
+                <thead class="thead-inverse">
+                    <tr>
+                      <th scope="col">#</th>
+                      <th scope="col">Username </th>
+                      <th scope="col">Apartment</th>
+                      <th scope="col">Message</th>
+                      <th scope="col">From</th>
+                      <th scope="col">Until</th>
+                      <th scope="col">Actions</th>
+                    </tr>
+                  </thead>
+                  <tbody id="reservations-body">
+                  </tbody>
+              </table>
+
+              <hr>
+              <h3>Other reservations</h3>
+              <table class="table table-hover" id="otherReservationsTable">
+                <thead class="thead-inverse">
+                    <tr>
+                      <th scope="col">#</th>
+                      <th scope="col">Username </th>
+                      <th scope="col">Apartment</th>
+                      <th scope="col">Message</th>
+                      <th scope="col">From</th>
+                      <th scope="col">Until</th>
+                      <th scope="col">Status</th>
+                    </tr>
+                  </thead>
+                  <tbody id="otherReservations-body">
+                  </tbody>
+              </table>
               
         </div>
     </div>
