--- a/WebContent/html/profile.html
+++ b/WebContent/html/profile.html
@@ -17,7 +17,25 @@
 	</nav>
     <div class="jumbotron">
         <div class="text-center">
-            <h2>My Details</h2>
+            <h2 id="pendingReservations">My reservations</h2>
+
+            <table class="table table-hover" id="reservationsTable">
+              <thead class="thead-inverse">
+                  <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Username </th>
+                    <th scope="col">Apartment</th>
+                    <th scope="col">Message</th>
+                    <th scope="col">From</th>
+                    <th scope="col">Until</th>
+                    <th scope="col"> Status / Actions</th>
+                  </tr>
+                </thead>
+                <tbody id="reservations-body">
+                </tbody>
+            </table>
+            <hr>
+            <h2 id="details">Edit personal data</h2>
             <div class="form">
                 <div class="username-section">
                     <p>Username </p>
