--- a/WebContent/html/profile.html
+++ b/WebContent/html/profile.html
@@ -13,7 +13,8 @@
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
-		<a class="nav-link" href="../index.html">Booking</a>
+        <a class="nav-link" href="../index.html">Booking</a>
+        <button class="btn btn-primary" id="review"> Leave a review</button>
 	</nav>
     <div class="jumbotron">
         <div class="text-center">
