--- a/WebContent/html/amenities.html
+++ b/WebContent/html/amenities.html
@@ -36,6 +36,27 @@
             </tbody>
             </table>
 
+            <!-- Modal -->
+            <div class="modal fade" id="amenitiesModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                    <h3 class="modal-title" id="exampleModalLabel">Edit amenity</h3>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    </div>
+                    <div class="modal-body">
+                        <input class="form-control" type="text" placeholder="Amenity name" id="amenity">
+                    </div>
+                    <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-success" id="postAmenity">Submit</button>
+                    </div>
+                </div>
+                </div>
+            </div>
+
         </div>
     </div>
 </body>
