--- a/WebContent/html/apartmentDetails.html
+++ b/WebContent/html/apartmentDetails.html
@@ -45,6 +45,10 @@
                 <div class="datesContainer">
                     
                 </div>
+				<h2 id="commentHeadline">Comment section</h2>
+                <div class="commentSection">
+
+                </div>
                 
                 <!-- Modal -->
                 <div class="modal fade" id="rentModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
