--- a/WebContent/html/hostProfile.html
+++ b/WebContent/html/hostProfile.html
@@ -76,6 +76,24 @@
                   <tbody id="otherReservations-body">
                   </tbody>
               </table>
+
+              <hr>
+              <h3 id="pendingReservations">Pending comments</h3>
+
+              <table class="table table-hover" id="commentsTable">
+                <thead class="thead-inverse">
+                    <tr>
+                      <th scope="col">#</th>
+                      <th scope="col">Username </th>
+                      <th scope="col">Apartment</th>
+                      <th scope="col">Comment text</th>
+                      <th scope="col">Rating</th>
+                      <th scope="col">Actions</th>
+                    </tr>
+                  </thead>
+                  <tbody id="comments-body">
+                  </tbody>
+              </table>
               
         </div>
     </div>
