--- a/WebContent/html/review.html
+++ b/WebContent/html/review.html
@@ -63,7 +63,7 @@
 
                 <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary" id="postAReview">Post a review</button>
+                <button type="button" class="btn btn-success" id="post">Post a review</button>
                 </div>
             </div>
             </div>
