--- a/WebContent/html/adminProfile.html
+++ b/WebContent/html/adminProfile.html
@@ -47,7 +47,7 @@
                     Add new host
                 </button>
                 
-                <h3 id="reservations">Reservations</h3>
+                <h2 id="reservations">Reservations</h2>
 
                 <table class="table table-hover" id="reservationsTable">
                     <thead class="thead-inverse">
@@ -62,6 +62,22 @@
                         </tr>
                       </thead>
                       <tbody id="reservations-body">
+                      </tbody>
+                  </table>
+
+                  <h2 id="comments">Comments</h2>
+                  <table class="table table-hover" id="commentsTable">
+                    <thead class="thead-inverse">
+                        <tr>
+                          <th scope="col">#</th>
+                          <th scope="col">Username </th>
+                          <th scope="col">Apartment</th>
+                          <th scope="col">Comment text</th>
+                          <th scope="col">Rating</th>
+                          <th scope="col">Status</th>
+                        </tr>
+                      </thead>
+                      <tbody id="comments-body">
                       </tbody>
                   </table>
                 
