--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -31,6 +31,7 @@
 			<div class="search-filter">
 
 				<button class="btn btn-primary" data-toggle="modal" data-target="#searchModal" id="searchApartments"> Search for apartment</button>
+				<button class="btn btn-primary" data-toggle="modal" data-target="#filterModal" id="filterApartments"> Filter apartments</button>
 
 				<select class="form-control" name="criteria" id="criteria">
 					<option value="priceASC">Price ascending</option>
@@ -49,7 +50,7 @@
 				
 			</div>
 			
-			<!-- Modal -->
+			<!-- searchModal -->
 			<div class="modal fade" id="searchModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 				<div class="modal-dialog" role="document">
 				<div class="modal-content">
@@ -72,6 +73,37 @@
 					<div class="modal-footer">
 					<button type="button" class="btn btn-light" data-dismiss="modal" id="close">Close</button>
 					<button type="button" class="btn btn-primary" id="search">Search</button>
+					</div>
+				</div>
+				</div>
+			</div>
+
+			<!-- filterModal -->
+			<div class="modal fade" id="filterModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+				<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+					<h3 class="modal-title" id="exampleModalLabel">Choose apartment properties</h3>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+					</div>
+					<div class="modal-body">
+
+						<select name="amenities" id="amenities" class="form-control" multiple>
+
+						</select>
+
+						<select name="apartmentType" id="apartmentType" class="form-control">
+							<option value="ROOM">Room</option>
+							<option value="FULL_APARTMENT">Full Apartment</option>
+						</select>
+
+					</div>
+
+					<div class="modal-footer">
+					<button type="button" class="btn btn-light" data-dismiss="modal" id="close">Close</button>
+					<button type="button" class="btn btn-primary" id="filter">Filter</button>
 					</div>
 				</div>
 				</div>
