--- a/WebContent/html/adminProfile.html
+++ b/WebContent/html/adminProfile.html
@@ -26,21 +26,9 @@
                 <button class="btn btn-primary" id="searchButton"> Search</button>
             </div>
 
-            <table class="table table-hover" id="usersTable">
-                <thead class="thead-inverse">
-                  <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Username </th>
-                    <th scope="col">First Name</th>
-                    <th scope="col">Last Name</th>
-                    <th scope="col">Gender</th>
-                    <th scope="col">Active</th>
-                    <th scope="col">Action</th>
-                  </tr>
-                </thead>
-                <tbody id="table-body">
-                </tbody>
-              </table>
+            <div class="usersTable-div">
+              
+            </div>
               <button class="btn btn-primary" id="amenities">Managing amenities</button>
               <!-- Adding hosts -->
                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#hostsModal" id="addNewHost">
@@ -67,22 +55,9 @@
                   <button class="btn btn-info" id="sort">Sort</button>
                 </div>
 
-                <table class="table table-hover" id="reservationsTable">
-                    <thead class="thead-inverse">
-                        <tr>
-                          <th scope="col">#</th>
-                          <th scope="col">Username </th>
-                          <th scope="col">Apartment</th>
-                          <th scope="col">Message</th>
-                          <th scope="col">From</th>
-                          <th scope="col">Until</th>
-                          <th scope="col">Price</th>
-                          <th scope="col">Status</th>
-                        </tr>
-                      </thead>
-                      <tbody id="reservations-body">
-                      </tbody>
-                  </table>
+                <div class="reservationsTable-div">
+                  
+                </div>
 
                   <h2 id="comments">Comments</h2>
                   <table class="table table-hover" id="commentsTable">
