--- a/WebContent/html/hostProfile.html
+++ b/WebContent/html/hostProfile.html
@@ -27,20 +27,9 @@
                 <button class="btn btn-primary" id="searchButton"> Search</button>
             </div>
 
-            <table class="table table-hover" id="usersTable">
-                <thead class="thead-inverse">
-                  <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Username </th>
-                    <th scope="col">First Name</th>
-                    <th scope="col">Last Name</th>
-                    <th scope="col">Gender</th>
-                    <th scope="col">Active</th>
-                  </tr>
-                </thead>
-                <tbody id="table-body">
-                </tbody>
-              </table>
+              <div class="usersTable-div">
+
+              </div>
               <hr>
               <h3 id="pendingReservations">Pending reservations</h3>
 
@@ -81,24 +70,8 @@
                 <button class="btn btn-info" id="sort">Sort</button>
               </div>
 
-              <div class="other-reservations-section">
-                <table class="table table-hover" id="otherReservationsTable">
-                  <thead class="thead-inverse">
-                      <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">Username </th>
-                        <th scope="col">Apartment</th>
-                        <th scope="col">Message</th>
-                        <th scope="col">From</th>
-                        <th scope="col">Until</th>
-                        <th scope="col">Price</th>
-                        <th scope="col">Status</th>
-                        <th scope="col">Actions</th>
-                      </tr>
-                    </thead>
-                    <tbody id="otherReservations-body">
-                    </tbody>
-                </table>
+              <div class="otherReservationsTable-div">
+                
               </div>
 
               <hr>
