--- a/WebContent/html/profile.html
+++ b/WebContent/html/profile.html
@@ -28,39 +28,10 @@
                 <button class="btn btn-info" id="sort">Sort</button>
               </div>
 
-              <table class="table table-hover" id="reservationsTable">
-                  <thead class="thead-inverse">
-                      <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">Username </th>
-                        <th scope="col">Apartment</th>
-                        <th scope="col">Message</th>
-                        <th scope="col">From</th>
-                        <th scope="col">Until</th>
-                        <th scope="col">Price</th>
-                        <th scope="col">Status</th>
-                      </tr>
-                    </thead>
-                    <tbody id="reservations-body">
-                    </tbody>
-                </table>
+              <div class="reservationsTable-div">
+                  
+              </div>
 
-            <table class="table table-hover" id="reservationsTable">
-              <thead class="thead-inverse">
-                  <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Username </th>
-                    <th scope="col">Apartment</th>
-                    <th scope="col">Message</th>
-                    <th scope="col">From</th>
-                    <th scope="col">Until</th>
-                    <th scope="col">Price</th>
-                    <th scope="col"> Status / Actions</th>
-                  </tr>
-                </thead>
-                <tbody id="reservations-body">
-                </tbody>
-            </table>
             <hr>
             <h2 id="details">Edit personal data</h2>
             <div class="form">
